[metadata]
name = python-data-structures-zachelkins
version = 0.0.1
author = Zachary Elkins
author_email = zach.elkins@gmail.com
description = A package that implements various data structures in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZachElkins/PythonDataStructures
project_urls = 
    Bug Tracker = https://github.com/ZachElkins/PythonDataStructures
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
package = find:
python_requires = >=3.6

[options.packages.find]
where = src