[metadata]
name = data_structures
version = 0.0.1
author = Zachary Elkins
author_email = zach.elkins@gmail.com
description = A package that implements various data structures in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZachElkins/PythonDataStructures
project_urls =
    Bug Tracker = https://github.com/ZachElkins/PythonDataStructures
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    data_structures
python_requires = >=3.6
package_dir =
    =src
 zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
data_structures = py.typed

[flake8]
max-line-length = 80